# CaptureTheFlag

./: .gitignore  CMakeLists.txt  README.md  Settings.cmake  main.cpp  test.cpp
Components/: Components.h
Entities/: Agent.cpp  Agent.h  CMakeLists.txt
MapCreator/: CMakeLists.txt  map_creator.cpp
Systems/: CMakeLists.txt  FlagSystem.cpp  FlagSystem.h  RenderSystem.cpp  RenderSystem.h
Utils/: Bresenham.hpp  Typedefs.h
